# brasilapi-client-rust

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: client.rs  commons.rs  constants.rs  errors.rs  lib.rs  main  request.rs
src/definitions/: banks.rs  cep.rs  ddd.rs  holidays.rs  mod.rs
