[package]
name = "brasilapi_client"
version = "0.1.0"
edition = "2018"

[features]
default = ["sync"]
async = []
sync = ["reqwest/blocking"]

[dependencies]
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.4", features = ["json"] } 
regex = "1"
lazy_static = "1.4.0"
thiserror = "^1.0.24"