[package]
name = "brasilapi-client"
version = "0.2.1"
authors = ["Renan Vizza Campos <renanvcampos@gmail.com>"]
description = "Rust client implementation to consume BrasilAPI"
repository = "https://github.com/rvcampos/brasilapi-client-rust"
categories = ["api-bindings"]
edition = "2018"
keywords = ["brasil", "brasilapi","brasil-api"]
license = "MIT"
readme = "README.md"

[features]
default = []
sync = []

[dependencies]
serde_json = "1.0"
serde =  { version = "1.0", features = ["derive"] }
isahc = "1.6"
log = "0.4"
regex = "1"
lazy_static = "1.4"
chrono = "0.4"

[dev-dependencies]
env_logger = "0.9"
futures-await-test = "0.3"
futures = "0.3"
